--- a/src/pages/Quiz/styles.module.css
+++ b/src/pages/Quiz/styles.module.css
@@ -1,5 +1,5 @@
 .navbar {
-  padding: 24px;
+  padding: 16px 24px;
   box-shadow: 1px 2px 4px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -8,7 +8,40 @@
   font-size: 25px;
 }
 
+.clock-container {
+  color: var(--black);
+}
+
 .title {
   font-size: 40px;
   color: var(--primary);
+}
+
+.logout-container {
+  color: red;
+}
+
+.container {
+  margin-top: 60px;
+}
+
+.question-number {
+  font-size: 24px;
+  color: var(--secondary);
+}
+
+.sub-question-number {
+  font-size: 16px;
+  color: var(--black);
+  opacity: 0.5;
+}
+
+.question {
+  font-size: 16px;
+  color: var(--black);
+}
+
+.answers {
+  margin-top: 24px;
+  width: 25%;
 }
