refactor: add clsx module to constructing classnames qa-9

--- a/src/assets/css/variabel.css
+++ b/src/assets/css/variabel.css
@@ -2,6 +2,9 @@
   --primary: #a594f9;
   --secondary: #cdc1ff;
   --black: #525252;
+  --green: #34c759;
+  --red: #ff3b30;
+
   --z-index-deep: -10;
   --z-index-low: 10;
   --z-index-surface: 20;
