--- a/src/pages/Login/styles.module.css
+++ b/src/pages/Login/styles.module.css
@@ -75,7 +75,11 @@
 .sub-title {
   font-size: 40px;
   color: var(--primary);
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+}
+
+.error-alert {
+  margin: 10px 0;
 }
 
 .form-login {
